# lexical-analyzer-php

./: .hgignore  CMakeLists.txt  README
future/: README
php-interpreter/: CMakeLists.txt
php-interpreter/client/: CMakeLists.txt
php-interpreter/client/forms/: mainwindow.ui
php-interpreter/client/src/: main.cpp  mainwindow.cpp  mainwindow.h
php-interpreter/lexical-analyzer/: CMakeLists.txt
php-interpreter/lexical-analyzer/forms/: mainwindow.ui
php-interpreter/lexical-analyzer/src/: LA_Aux.h  LexicalAnalyzer.h  Token.h  mainwindow.cpp
php-interpreter/lib/: CMakeLists.txt
php-interpreter/lib/include/: Aux_def.h  CodeGenerator.h  LA_Aux.h  LexicalAnalyzer.h  SemanticAnalyzer.h  SyntaxAnalizer.h  Token.h  TokenSource.h
php-interpreter/lib/src/: LA_Aux.cpp  LexicalAnalyzer.cpp  SemanticAnalyzer.cpp  SyntaxAnalizer.cpp  Token.cpp  TokenSource.cpp  main.cc
php-interpreter/tests/: CMakeLists.txt
php-interpreter/tests/data/: source_1.php  source_2.php  source_error_handling.php
php-interpreter/tests/include/: TEST_BASE_Lexical_analyzer.h  TEST_Lexical_Analyzer.h
php-interpreter/tests/src/: TEST_BASE_Lexical_Analyzer.cpp  TEST_Lexical_analyer.cpp  entry_point.cc
php_snippents/: source.php
src/: LA_Aux.cpp  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.h  main.cpp  mainwindow.cpp
